<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gris"
    tools:context=".Estadisticas">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="-65dp"
        tools:layout_editor_absoluteY="-4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblMes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginTop="88dp"
                android:layout_marginEnd="50dp"
                android:text="@string/mes"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@+id/cboMes"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/cboMes"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="77dp"
                android:layout_marginEnd="114dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/lblMes"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/lblProfesores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="30dp"
                android:text="@string/profesoresRegistrados"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblMes" />

            <EditText
                android:id="@+id/txtProfesores"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="172dp"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/cero"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblProfesores"
                tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

            <TextView
                android:id="@+id/lblHora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="168dp"
                android:text="@string/horaDemandada"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtProfesores" />

            <EditText
                android:id="@+id/txtHora"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="172dp"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/cero"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblHora"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/lblImpresion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="48dp"
                android:text="@string/impresionesMensuales"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtHora" />


            <EditText
                android:id="@+id/txtImpresiones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="29dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="172dp"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/cero"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lblImpresion"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/cmdBuscar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:background="@drawable/button_rounded"
                android:text="@string/buscar"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtImpresiones"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/cmdLimpiar"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:background="@drawable/button_rounded_border"
                android:text="@string/limpiar"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cmdBuscar" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>