<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#202732"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="79dp"
        tools:layout_editor_absoluteY="-16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="142dp"
                android:layout_marginTop="60dp"
                android:contentDescription="TODO"
                app:srcCompat="@drawable/formicon" />

            <EditText
                android:id="@+id/txtNumTrab"
                android:layout_width="318dp"
                android:layout_height="42dp"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="116dp"
                android:ems="10"
                android:hint="@string/txtNumTrab"
                android:importantForAutofill="no"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF" />

            <Button
                android:id="@+id/cmdIniciarSesion"
                android:layout_width="219dp"
                android:layout_height="48dp"
                android:layout_marginLeft="88dp"
                android:layout_marginTop="92dp"
                android:background="@drawable/button_rounded"
                android:onClick="IniciarSesion"
                android:text="@string/cmdIniciarSesion"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/cmdRegistrarse"
                android:layout_width="219dp"
                android:layout_height="48dp"
                android:layout_marginLeft="88dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_rounded_border"
                android:onClick="formRegistro"
                android:text="@string/cmdRegistrarse"
                android:textColor="#FFFFFF" />

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/lblApellidos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:enabled="false"
        android:layout_marginLeft="92dp"
        android:text=""
        android:textColor="#FFFFFF"
        android:visibility="invisible"
        tools:layout_editor_absoluteY="661dp" />

    <TextView
        android:id="@+id/lblNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="92dp"
        android:enabled="false"
        android:text=""
        android:textColor="#FFFFFF"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="68dp"
        tools:layout_editor_absoluteY="554dp" />

    <TextView
        android:id="@+id/lblFecha"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="92dp"
        android:enabled="false"
        android:text=""
        android:visibility="invisible"
        tools:layout_editor_absoluteY="630dp" />

    <TextView
        android:id="@+id/lblHora"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="92dp"
        android:enabled="false"
        android:text=""
        android:visibility="invisible"
        tools:layout_editor_absoluteY="626dp" />


</RelativeLayout>